--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 style="color: red">hello</h1>
+    <h1 style="color: blue">hello</h1>
     <button style="color: blue">enter</button>
   </body>
 </html>
